package edu.fiuba.algo3.modelo.Palo;

public interface Palo {
    public boolean sonMismoPalo(Palo otroPalo);

}
